[package]
name = "alga"
version = "0.9.0"
authors = ["Brendan Zabarauskas", "Darin Morrison", "Sébastien Crozet", "Wadelma <delma@del.ma>"]
description = "Abstract algebra for Rust"
keywords = ["algebra", "monoids", "math"]
categories = ["Science"]
readme = "README.md"
repository = "https://github.com/rustsim/alga"
documentation = "https://docs.rs/alga"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "alga"

[features]
default = [ "std" ]
std = [ ]

[dependencies]
num-traits  = { version = "0.2", default-features = false }
approx      = { version = "0.3", default-features = false }
decimal     = { version = "2.0", default-features = false, optional = true }
num-complex = { version = "0.2", default-features = false }
libm        = "0.1"

[dev-dependencies]
quickcheck  = "0.8"
alga_derive = { version = "0.9", path = "../alga_derive" }
