[package]
name        = "alga_derive"
version     = "0.9.1"
authors     = ["Brendan Zabarauskas", "Darin Morrison", "Sébastien Crozet", "Wadelma <delma@del.ma>"]
description = "Derive attribute for implementing algebraic traits from the alga crate."
keywords    = ["algebra", "monoids", "math"]
categories  = ["Science"]
readme      = "README.md"
repository  = "https://github.com/rustsim/alga"
license     = "Apache-2.0"

[lib]
name       = "alga_derive"
proc-macro = true

[dependencies]
proc-macro2   = "0.4"
quote         = "0.6"
syn           = "0.15"
edit-distance = "2.0"
quickcheck    = "0.8"
