[package]
name        = "alga_derive"
version     = "0.9.2"
authors     = ["Brendan Zabarauskas", "Darin Morrison", "Sébastien Crozet", "Wadelma <delma@del.ma>"]
description = "Derive attribute for implementing algebraic traits from the alga crate."
keywords    = ["algebra", "monoids", "math"]
categories  = ["Science"]
readme      = "README.md"
repository  = "https://github.com/rustsim/alga"
license     = "Apache-2.0"

[lib]
name       = "alga_derive"
proc-macro = true

[dependencies]
proc-macro2   = "1.0"
quote         = "1.0"
syn           = "1.0"
edit-distance = "2.1"
quickcheck    = "0.9"
